K3 Files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: default-test-header@kubernetescrd
spec:
  rules:
    - host: #Your domain
      http:
        paths:
          - path: /results
            pathType: Prefix
            backend:
              service:
                name: orchastrator
                port:
                  number: 8080
 
          - path: /getUploadURL
            pathType: Prefix
            backend:
              service:
                name: orchastrator
                port:
                  number: 8080
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: orchastrator
                port:
                  number: 8080
                    
          # Default catch-all route for frontend service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
